--- a/TechLead_SGE/TechLead_SGE.Server/appsettings.json
+++ b/TechLead_SGE/TechLead_SGE.Server/appsettings.json
@@ -33,6 +33,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // CNX_BD DESARROLLO
-    "CNX_BD": "Data source=SDESSQLSRV01.SYC.LOC;initial catalog=DB_BPMMAIL;user id=user_recepcion;password=1234;application name=API RECEPCION MAIL SERVICE SYC;"
+    "CNX_BD": "Data Source=ALEJANDRO-PC;Database=TechLead_SGE_BD;Trusted_Connection=True;TrustServerCertificate=True;Application Name=TechLead_SGE.Server;"
   }
 }
