Se agregan archivos de README y también se realiza un reestructura de los proyectos, se llega a nivel atomico separando en una arquitectura heaxagonal el proyecto, Domain, Data, BL, Utilities, Server y Client.

--- a/TechLead_SGE/TechLead_SGE.Server.BL/TechLead_SGE.Server.BL.csproj
+++ b/TechLead_SGE/TechLead_SGE.Server.BL/TechLead_SGE.Server.BL.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TechLead_SGE.Server.Domain\TechLead_SGE.Server.Domain.csproj" />
   </ItemGroup>
 
 </Project>
