--- a/TechLead_SGE/TechLead_SGE.Server.Utilities/TechLead_SGE.Server.Utilities.csproj
+++ b/TechLead_SGE/TechLead_SGE.Server.Utilities/TechLead_SGE.Server.Utilities.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
